# MIPS-FPGA

./: .gitignore  README.md
mips16-processor/: vcpkg.json
mips16-processor/src/: CMakeLists.txt  D_FF.sv  PC_Reg.sv  adder.sv  alu.sv  alu_control.sv  control.sv  counter.sv  data_memory.sv  dec5to32.sv  decoder.sv  instr_mem.sv  jr_control.sv  mips_16.sv  module internal_xor_5_bit_lfsr.sv  mux2_1.sv  mux2_5to5.sv  register_file.sv
mips16-processor/testbench/: CMakeLists.txt  main.cpp  tb.sv
